--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CalculadoraJS</title>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles.style.css">
 </head>
 <body>
-    
+    <main id="calculator">
+        <input type="text" id="calculum-info">
+        <ul id="inputs">
+            <li id="clear" class="utility-button">C</li>
+            <li id="percent" class="utility-button">%</li>
+            <li id="division" class="utility-button">/</li>
+            <li id="multiply" class="utility-button">*</li>
+            <li id="7" class="main-button">7</li>
+            <li id="8" class="main-button">8</li>
+            <li id="9" class="main-button">9</li>
+            <li id="4" class="main-button">4</li>
+            <li id="5" class="main-button">5</li>
+            <li id="6" class="main-button">6</li>
+            <li id="1" class="main-button">1</li>
+            <li id="2" class="main-button">2</li>
+            <li id="3" class="main-button">3</li>
+            <li id="equal-button" class="equal-button">=</li>
+            <li id="0" class="main-button">0</li>
+            <li id="." class="main-button">.</li>
+            <li id="backspace" class="main-button">&#9003</li>
+        </ul>
+    </main>
+    <footer id="author">feito por Éderson</footer>
 </body>
 </html>
