--- a/index.html
+++ b/index.html
@@ -10,29 +10,28 @@
 </head>
 <body>
     <main id="calculator">
-        <input type="text" id="calculum-info">
+        <input type="text" id="calculum-info" readonly>
         <ul id="inputs">
-            <li id="clear" class="utility-button">C</li>
-            <li id="percent" class="utility-button">%</li>
-            <li id="division" class="utility-button">/</li>
-            <li id="multiply" class="utility-button">*</li>
-            <li id="7" class="main-button">7</li>
-            <li id="8" class="main-button">8</li>
-            <li id="9" class="main-button">9</li>
-            <li class="utility-button">-</li>
-            <li id="4" class="main-button">4</li>
-            <li id="5" class="main-button">5</li>
-            <li id="minus" id="6" class="main-button">6</li>
-            <li id="plus" class="utility-button">+</li>
-            <li id="1" class="main-button">1</li>
-            <li id="2" class="main-button">2</li>
-            <li id="3" class="main-button">3</li>
-            <li id="equal-button" class="equal-button">=</li>
-            <li id="0" class="main-button">0</li>
-            <li id="." class="main-button">.</li>
-            <li id="backspace" class="main-button">&#9003</li>
-            
-            
+            <li id="clear" class="utility-button"><button id="clear">C</button></li>
+            <li  class="utility-button"><button id="percent">%</button></li>
+            <li  class="utility-button"><button id="division">/</button></li>
+            <li  class="utility-button"><button id="multiply">*</button></li>
+            <li id="7" class="main-button"><button id="number7">7</button></li>
+            <li id="8" class="main-button"><button id="number8">8</button></li>
+            <li id="9" class="main-button"><button id="number9">9</button></li>
+            <li class="utility-button"><button id="minus">-</button></li>
+            <li id="4" class="main-button"><button id="number4">4</button></li>
+            <li id="5" class="main-button"><button id="number5">5</button></li>
+            <li id="6" class="main-button"><button id="number6">6</button></li>
+            <li class="utility-button"><button id="plus">+</button></li>
+            <li id="1" class="main-button"><button id="number1">1</button></li>
+            <li id="2" class="main-button"><button id="number2">2</button></li>
+            <li id="3" class="main-button"><button id="number3">3</button></li>
+            <li class="utility-button"><button id="backspace">&#9003</button></li>
+            <li class="main-button"><button id="number0">0</button></li>
+            <li class="main-button"><button id="number00">00</button></li>
+            <li class="main-button"><button id="point">.</button></li>
+            <li id="equal-button" class="equal-button"><button id="equal">=</button></li>
         </ul>
     </main>
     <footer id="author">feito por Éderson</footer>
