--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
     <main id="calculator">
         <input type="text" id="calculum-info" readonly>
         <ul id="inputs">
-            <li id="clear" class="utility-button"><button id="clear">C</button></li>
-            <li  class="utility-button"><button id="percent">%</button></li>
-            <li  class="utility-button"><button id="division">/</button></li>
-            <li  class="utility-button"><button id="multiply">*</button></li>
-            <li id="7" class="main-button"><button id="number7">7</button></li>
-            <li id="8" class="main-button"><button id="number8">8</button></li>
-            <li id="9" class="main-button"><button id="number9">9</button></li>
-            <li class="utility-button"><button id="minus">-</button></li>
-            <li id="4" class="main-button"><button id="number4">4</button></li>
-            <li id="5" class="main-button"><button id="number5">5</button></li>
-            <li id="6" class="main-button"><button id="number6">6</button></li>
-            <li class="utility-button"><button id="plus">+</button></li>
-            <li id="1" class="main-button"><button id="number1">1</button></li>
-            <li id="2" class="main-button"><button id="number2">2</button></li>
-            <li id="3" class="main-button"><button id="number3">3</button></li>
-            <li class="utility-button"><button id="backspace">&#9003</button></li>
-            <li class="main-button"><button id="number0">0</button></li>
-            <li class="main-button"><button id="number00">00</button></li>
-            <li class="main-button"><button id="point">.</button></li>
-            <li id="equal-button" class="equal-button"><button id="equal">=</button></li>
+            <li id="clear" class="utility-button"><button id="clear" class="utility-button">C</button></li>
+            <li  class="utility-button"><button id="percent" class="utility-button">%</button></li>
+            <li  class="utility-button"><button id="division" class="utility-button">/</button></li>
+            <li  class="utility-button"><button id="multiply" class="utility-button">*</button></li>
+            <li id="7" class="main-button"><button id="number7" class="main-button">7</button></li>
+            <li id="8" class="main-button"><button id="number8" class="main-button">8</button></li>
+            <li id="9" class="main-button"><button id="number9" class="main-button">9</button></li>
+            <li class="utility-button"><button id="minus" class="utility-button">-</button></li>
+            <li id="4" class="main-button"><button id="number4" class="main-button">4</button></li>
+            <li id="5" class="main-button"><button id="number5" class="main-button">5</button></li>
+            <li id="6" class="main-button"><button id="number6" class="main-button">6</button></li>
+            <li class="utility-button"><button id="plus" class="utility-button">+</button></li>
+            <li id="1" class="main-button"><button id="number1" class="main-button">1</button></li>
+            <li id="2" class="main-button"><button id="number2" class="main-button">2</button></li>
+            <li id="3" class="main-button"><button id="number3" class="main-button">3</button></li>
+            <li class="utility-button"><button id="backspace" class="utility-button">&#9003</button></li>
+            <li class="main-button"><button id="number0" class="main-button">0</button></li>
+            <li class="main-button"><button id="number00" class="main-button">00</button></li>
+            <li class="main-button"><button id="point" class="main-button">.</button></li>
+            <li id="equal-button" class="equal-button"><button id="equal" class="equal-button">=</button></li>
         </ul>
     </main>
     <footer id="author">feito por Éderson</footer>
