--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
             <li id="equal-button" class="equal-button"><button id="equal" class="equal-button">=</button></li>
         </ul>
     </main>
-    <footer id="author">feito por Éderson</footer>
+    <footer id="author">feito por Éderson :D</footer>
 </body>
 </html>
