feito design do output

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <main id="calculator">
         <!-- <input type="text" id="calculum-info" readonly> -->
         <div id="calculum-info">
-            <div id="calculum-history"></div>
+            <div id="calculum-history">calc history here</div>
             <div id="calculum-now">
-                <span id="operation-now"></span>
-                <span id="number-now"></span>
+                <span id="operation-now">operation</span>
+                <span id="number-now">value</span>
             </div>
         </div>
         <ul id="inputs">
