operation-now alinhado ao final do output

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div id="calculum-info">
             <div id="calculum-history">calc history here</div>
             <div id="calculum-now">
-                <span id="operation-now">operation</span>
-                <span id="number-now">value</span>
+                <span id="operation-now">+</span>
+                <span id="number-now">3</span>
             </div>
         </div>
         <ul id="inputs">
