--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CalculadoraJS</title>
+    <title >CalculadoraJS</title>
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/49/49998.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+    
     <main id="calculator">
         <!-- <input type="text" id="calculum-info" readonly> -->
         <div id="calculum-info">
