adicionada interatividade de alguns botões

--- a/index.html
+++ b/index.html
@@ -44,5 +44,7 @@
         </ul>
     </main>
     <footer id="author">feito por Éderson :D</footer>
+
+    <script src="./script/script.js"></script>
 </body>
 </html>
