--- a/index.html
+++ b/index.html
@@ -21,20 +21,24 @@
 			</section>
 			<section class="buttons">
 				<button class="clear">C</button>
-                <button class="history">H</button>
-                <button class="percent">%</button>
-                <button class="division">÷</button>
-                <button class="seven">7</button>
-                <button class="eight">8</button>
-                <button class="nine">9</button>
-                <button class="multiply">x</button>
-                <button class="four">4</button>
-                <button class="five">5</button>
-                <button class="six">6</button>
-                <button class="minus">-</button>
-                <button class="dot">.</button>
-                <button class="zero">0</button>
-                <button class="backspace">⌫</button>
+                <button class="history normal-btn">H</button>
+                <button class="percent normal-btn">%</button>
+                <button class="division operation">÷</button>
+                <button class="seven normal-btn">7</button>
+                <button class="eight normal-btn">8</button>
+                <button class="nine normal-btn">9</button>
+                <button class="multiply operation">x</button>
+                <button class="four normal-btn">4</button>
+                <button class="five normal-btn">5</button>
+                <button class="six normal-btn">6</button>
+                <button class="minus operation">-</button>
+				<button class="four normal-btn">1</button>
+                <button class="five normal-btn">2</button>
+                <button class="six normal-btn">3</button>
+                <button class="plus operation">+</button>
+                <button class="dot normal-btn" >.</button>
+                <button class="zero normal-btn">0</button>
+                <button class="backspace normal-btn">⌫</button>
                 <button class="equal">=</button>
 			</section>
 		</main>
